Can pass a port parameter to web_gui ?port=9876. Can look from origin.

--- a/web_gui/index.html
+++ b/web_gui/index.html
@@ -66,6 +66,15 @@
         <div id="gui">
         <div id="title">THREE.js + HTML GUI</div>
         
+        <div>
+            <form id="variables" action="">
+            <div class="control_group">
+            Camera:<br>
+                <!-- <div class="widget"><label>Rotation has intertia:<input type="checkbox" id="intertia" /></label></div> -->
+                <div><a href="#" id="look_from_111">Look from (1,1,1)</a></div>
+            </div>
+        </div>
+        
 <!-- 
         <div>
             <form id="variables" action="">
